testing/tests/ui/incorrect_path.rs
use askama::Template;

#[derive(Template)]
#[template(path = "thisdoesnotexist.html")]
struct MyTemplate;

fn main() {
}
